Replaced NULL throughout the codebase with nullptr. Replaced BOOL throughout the codebase with bool. This means that the minimum requirement for the application is now Microsoft Visual C++ 2010. Updated PJ Naughter's CVersionInfo library to the latest version available.

--- a/CryptLibraryDemo.vcxproj
+++ b/CryptLibraryDemo.vcxproj
@@ -135,6 +135,7 @@ echo.
     <None Include="hlp\HIDD_ROOT_DIALOG.htm">
       <DeploymentContent>true</DeploymentContent>
     </None>
+    <None Include="README.md" />
     <None Include="ReadMe.txt" />
     <None Include="res\CryptLibraryDemo.ico" />
     <None Include="res\CryptLibraryDemo.rc2" />
