--- a/CryptLibraryDemo.rc
+++ b/CryptLibraryDemo.rc
@@ -76,20 +76,20 @@ IDR_MAINFRAME           ICON                    "res\\CryptLibraryDemo.ico"
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 170, 184
+IDD_ABOUTBOX DIALOGEX 0, 0, 183, 222
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About..."
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,20,20
-    LTEXT           "Crypt Library Demo, Version 1.0",IDC_VERSION,48,14,115,8,SS_NOPREFIX
-    LTEXT           "Copyright 2023 Stefan-Mihai MOGA",IDC_STATIC,48,26,115,8
-    DEFPUSHBUTTON   "OK",IDCANCEL,100,160,63,17,WS_GROUP
-    EDITTEXT        IDC_WARNING,7,40,156,80,ES_MULTILINE | ES_READONLY | ES_WANTRETURN
-    RTEXT           "Website:",IDC_STATIC,7,128,41,12
-    LTEXT           "http://www.emvs.site/",IDC_WEBSITE,56,128,107,12,SS_CENTERIMAGE
-    RTEXT           "E-mail:",IDC_STATIC,7,140,41,12
-    LTEXT           "contact@emvs.site",IDC_EMAIL,56,140,107,12,SS_CENTERIMAGE
+    DEFPUSHBUTTON   "OK",IDOK,126,201,50,14
+    ICON            IDR_MAINFRAME,IDC_STATIC,14,14,21,20
+    LTEXT           "Crypt Library Demo, Version 1.0",IDC_VERSION,48,14,128,8,SS_NOPREFIX
+    LTEXT           "Copyright (C) 2023 Stefan-Mihai MOGA",IDC_STATIC,48,26,128,8
+    EDITTEXT        IDC_WARNING,7,40,169,121,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | ES_WANTRETURN
+    RTEXT           "Website:",IDC_STATIC,7,167,41,12
+    LTEXT           "https://www.emvs.site/",IDC_WEBSITE,57,167,119,12,SS_CENTERIMAGE
+    RTEXT           "Email:",IDC_STATIC,7,179,41,12
+    LTEXT           "contact@emvs.site",IDC_EMAIL,57,179,119,12,SS_CENTERIMAGE
 END
 
 IDD_CRYPTLIBRARYDEMO_DIALOG DIALOGEX 0, 0, 321, 194
@@ -164,19 +164,13 @@ BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 163
+        RIGHTMARGIN, 176
         VERTGUIDE, 48
-        VERTGUIDE, 56
-        VERTGUIDE, 92
-        VERTGUIDE, 100
+        VERTGUIDE, 57
         TOPMARGIN, 7
-        BOTTOMMARGIN, 177
-        HORZGUIDE, 40
-        HORZGUIDE, 120
-        HORZGUIDE, 128
-        HORZGUIDE, 140
-        HORZGUIDE, 152
-        HORZGUIDE, 160
+        BOTTOMMARGIN, 215
+        HORZGUIDE, 161
+        HORZGUIDE, 167
     END
 
     IDD_CRYPTLIBRARYDEMO_DIALOG, DIALOG
