--- a/CryptLibraryDemo.vcxproj
+++ b/CryptLibraryDemo.vcxproj
@@ -254,6 +254,7 @@ echo.
   <ItemGroup>
     <ClInclude Include="CryptLibraryDemo.h" />
     <ClInclude Include="CryptLibraryDemoDlg.h" />
+    <ClInclude Include="HLinkCtrl.h" />
     <ClInclude Include="VersionInfo.h" />
     <CustomBuild Include="Resource.h">
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">hlp\HTMLDefines.h;%(Outputs)</Outputs>
@@ -334,7 +335,6 @@ makehm /h /a afxhh.h IDW_,HIDW_,0x50000 "%(FullPath)" &gt;&gt; "hlp\HTMLDefines.
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Generating map file for help compiler...</Message>
     </CustomBuild>
     <ClInclude Include="CryptographyExt.h" />
-    <ClInclude Include="HyperlinkStatic.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -342,7 +342,7 @@ makehm /h /a afxhh.h IDW_,HIDW_,0x50000 "%(FullPath)" &gt;&gt; "hlp\HTMLDefines.
     <ClCompile Include="CryptLibraryDemo.cpp" />
     <ClCompile Include="CryptLibraryDemoDlg.cpp" />
     <ClCompile Include="CryptographyExt.cpp" />
-    <ClCompile Include="HyperlinkStatic.cpp" />
+    <ClCompile Include="HLinkCtrl.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
