Updated the About dialog (email & website). Added social media links: Twitter, LinkedIn, Facebook, and Instagram. Added shortcuts to GitHub repository's Issues, Discussions, and Wiki.

--- a/CryptLibraryDemo.rc
+++ b/CryptLibraryDemo.rc
@@ -88,9 +88,9 @@ BEGIN
     LTEXT           "Copyright (C) 2023 Stefan-Mihai MOGA",IDC_STATIC,48,26,128,8
     EDITTEXT        IDC_WARNING,7,40,169,121,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | ES_WANTRETURN
     RTEXT           "Website:",IDC_STATIC,7,167,41,12
-    LTEXT           "https://www.emvs.site/",IDC_WEBSITE,57,167,119,12,SS_NOTIFY | SS_CENTERIMAGE
+    LTEXT           "https://www.moga.doctor/",IDC_WEBSITE,57,167,119,12,SS_NOTIFY | SS_CENTERIMAGE
     RTEXT           "Email:",IDC_STATIC,7,179,41,12
-    LTEXT           "contact@emvs.site",IDC_EMAIL,57,179,119,12,SS_NOTIFY | SS_CENTERIMAGE
+    LTEXT           "stefan-mihai@moga.doctor",IDC_EMAIL,57,179,119,12,SS_NOTIFY | SS_CENTERIMAGE
 END
 
 IDD_CRYPTLIBRARYDEMO_DIALOG DIALOGEX 0, 0, 321, 194
@@ -121,8 +121,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,1,0,0
- PRODUCTVERSION 1,1,0,0
+ FILEVERSION 1,2,0,0
+ PRODUCTVERSION 1,2,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -137,14 +137,14 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "http://www.emvs.site/"
+            VALUE "CompanyName", "https://www.moga.doctor/"
             VALUE "FileDescription", "Demo application for Crypt Library"
-            VALUE "FileVersion", "1.1.0.0"
+            VALUE "FileVersion", "1.2.0.0"
             VALUE "InternalName", "CryptLibraryDemo.exe"
             VALUE "LegalCopyright", "Copyright 2023 Stefan-Mihai MOGA - All rights reserved."
             VALUE "OriginalFilename", "CryptLibraryDemo.exe"
             VALUE "ProductName", "Crypt Library Demo"
-            VALUE "ProductVersion", "1.1.0.0"
+            VALUE "ProductVersion", "1.2.0.0"
         END
     END
     BLOCK "VarFileInfo"
