Renamed SoftwareContextRegister.html to SoftwareContentRegister.html for clarity and accuracy
The original filename contained a typo: "Context" was mistakenly used instead of "Content". This rename corrects the error to better reflect the actual purpose of the file, which is related to registering software content, not context.

This change improves codebase readability and aligns the file naming with the domain terminology used throughout the project. All references to the old filename have been updated accordingly to prevent broken links or import issues.

Signed-off-by: Stefan-Mihai MOGA <stefan-mihai@moga.doctor>

--- a/CryptLibraryDemo.vcxproj
+++ b/CryptLibraryDemo.vcxproj
@@ -260,8 +260,10 @@ echo.
     </None>
     <None Include="README.md" />
     <None Include="ReadMe.txt" />
+    <None Include="ReleaseNotes.html" />
     <None Include="res\CryptLibraryDemo.ico" />
     <None Include="res\CryptLibraryDemo.rc2" />
+    <None Include="SoftwareContentRegister.html" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CryptLibraryDemo.h" />
